# OOP_Labs

./: .gitignore  CMakeLists.txt
FirstLab/: CMakeLists.txt  main.cpp
FirstLab/include/: closest_pair_tonum.h
FirstLab/src/: closest_pair_tonum.cpp
FirstLab/tests/: main_test.cpp
fifth_lab/: CMakeLists.txt  main.cpp
fifth_lab/include/: list.hpp
first_lab/: CMakeLists.txt  main.cpp
first_lab/src/: closest_pair_tonum.cpp
first_lab/tests/: main_test.cpp
forth_lab/: CMakeLists.txt  main.cpp
forth_lab/include/: Array.hpp  Figure.hpp  Octagon.hpp  Point.hpp  Square.hpp  Triangle.hpp
second_lab/: CMakeLists.txt  main.cpp
second_lab/include/: Eleven.hpp
second_lab/src/: Eleven.cpp
second_lab/tests/: main_tests.cpp
seventh_lab/: CMakeLists.txt  log.txt  main.cpp  npc.txt
seventh_lab/include/: Bull.h  Dragon.h  Toad.h  editor.h  npc.h  utils.h
seventh_lab/src/: Bull.cpp  Dragon.cpp  Toad.cpp  editor.cpp  fightManager.cpp  npc.cpp  utils.cpp
seventh_lab/test/: main_test.cpp
sixth_lab/: CMakeLists.txt  log.txt  main.cpp  npc.txt
sixth_lab/include/: Bull.h  Dragon.h  Toad.h  editor.h  npc.h
sixth_lab/src/: Bull.cpp  Dragon.cpp  Toad.cpp  editor.cpp  npc.cpp
sixth_lab/test/: main_test.cpp
third_lab/: CMakeLists.txt  main.cpp
third_lab/include/: Pentagon.h  Rhombus.h  Trapezoid.h  figure.hpp
third_lab/src/: Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp  figure.cpp
third_lab/tests/: main_test.cpp
